<resources>
    <string name="app_name" translatable="false">DeAR</string>
    <string name="button_send">Send</string>
    <string name="pre_admission">Pre-Admission</string>
    <string name="on_the_way">On the way</string>
    <string name="in_delivery">In delivery</string>
    <string name="delivered">Delivered</string>
    <string name="chat_button_content_description">Chat button</string>
    <string name="log_in_email_hint">Email or username</string>
    <string name="password_hint">Password</string>
    <string name="log_in_button">Log In</string>
    <string name="log_in_divider_or">Or</string>
    <string name="log_in_google">Log In with Google</string>
    <string name="log_in_authorized_courier">Are you an authorized courier?</string>
    <string name="new_to_dear">New to deAR?</string>
    <string name="click_here_to_sign_up">Click here to Sign Up!</string>
    <string name="sign_up_button">Sign Up</string>
    <string name="talk_to_your_courier">Talk to your courier</string>
    <string name="your_package_is_scheduled_to_arrive_on">Your package is scheduled to arrive on:</string>
    <string name="locate">Locate</string>
    <string name="ar">AR</string>
    <string name="talk_to_your_receiver">Talk to your receiver</string>
    <string name="live_route">Live route</string>
    <string name="additional_instructions">Additional instructions</string>
    <string name="receiver">Receiver</string>
    <string name="address">Address</string>
    <string name="phone_number">Phone number</string>
    <string name="proof_of_delivery">Proof of delivery</string>
    <string name="clear">Clear</string>
    <string name="confirm">Confirm</string>
    <string name="input_tracking_code">Tracking code</string>
    <string name="alias_for_package">Alias for your package</string>
    <string name="add_tracking">Add tracking</string>
    <string name="current_trackings">Current Trackings</string>
    <string name="pending_shipments">Pending Shipments</string>
    <string name="button_search">Search</string>
    <string name="add_button">Add tracking!</string>
    <string name="scanner">Scanner</string>
    <string name="scanner_text">Scan packages and check their info</string>
    <string name="test_package_name">#123456789 - Alarm clock</string>
    <string name="test_package_name_2">#121212121 - Sony headphones</string>
    <string name="test_package_description">Shipper: Aliexpress.com</string>
    <string name="test_package_description_2">Shipper: Amazon.com</string>
    <string name="test_arrival_time">Your package arrives in 2 days</string>
    <string name="test_arrival_time_2">Your package arrives in 3 days</string>
    <string name="test_address">John Doe, 2421 16th St, San Francisco</string>
    <string name="chat_reply_button">Reply</string>
    <string name="live_ar_route">Live Route</string>
    <string name="test_address_2">Jane Doe, 2343 Bryant St, San Francisco</string>
    <string name="scan">Scan</string>
    <string name="delete_text">Delete</string>
    <string name="cancel_text">Cancel</string>
    <string name="delete_dialog_title">Confirm Deletion</string>
    <string name="delete_dialog_content">Are you sure you want to remove this tracking?</string>
    <string name="delivery_details">Delivery details</string>
    <string name="log_in">Log In</string>
    <string name="tracking_details">Tracking details</string>
    <string name="sign_up">Sign up</string>
    <string name="profile">Profile</string>
    <string name="chat">Chat</string>
    <string name="shipper_company">Shipper Company</string>
    <string name="log_out">Log out</string>
    <string name="account">Account</string>
    <string name="confirm_log_out">Are you sure you want to log out?</string>
    <string name="tracking_code_hint"><i>121212121</i></string>
    <string name="alias_hint"><i>Cycling jersey</i></string>
    <string name="additional_instructions_hint"><i>Please leave the package on the doormat</i></string>
    <string name="non_priority_feature">Non-priority feature</string>
    <string name="package_found">Tracking found :)</string>
    <string name="package_not_found">Tracking not found :(</string>
    <string name="tracking_number_empty">Tracking number cannot be empty</string>
    <string name="already_tracking">You already are tracking for this number</string>
    <string name="field_not_blank">This field cannot be blank</string>
    <string name="no_qr">No QR code found</string>
    <string name="past_trackings">Past trackings</string>
    <string name="past_shipments">Past shipments</string>
</resources>