<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintViewPendShipments"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddTracking">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/topAppBar"
        style="@style/Widget.MaterialComponents.Toolbar.Primary"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="?attr/actionModeCloseDrawable"
        app:title="@string/add_tracking"/>

    <TextView
        android:id="@+id/text_input_tracking_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="48dp"
        android:textSize="17sp"
        android:text="@string/input_tracking_code"
        app:layout_constraintBottom_toTopOf="@+id/tracking_code"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topAppBar"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/alias_for_package"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="36dp"
        android:textSize="17sp"
        android:text="@string/alias_for_package"
        app:layout_constraintBottom_toTopOf="@+id/alias_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tracking_code"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/alias_text"
        android:layout_width="0dp"
        android:layout_height="43dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="57dp"
        android:hint="@string/alias_hint"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/additional_instructions"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/alias_for_package"
        app:layout_constraintVertical_bias="0.03" />

    <TextView
        android:id="@+id/additional_instructions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="36dp"
        android:textSize="17sp"
        android:text="@string/additional_instructions"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/alias_text" />

    <EditText
        android:id="@+id/additionalInstructionsText"
        android:layout_width="0dp"
        android:layout_height="123dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="30dp"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:hint="@string/additional_instructions_hint"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/additional_instructions"
        app:layout_constraintVertical_bias="0.038" />

    <EditText
        android:id="@+id/tracking_code"
        android:layout_width="221dp"
        android:layout_height="40dp"
        android:layout_marginStart="25dp"
        android:inputType="number"
        android:hint="@string/tracking_code_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_input_tracking_code" />

    <com.google.android.material.button.MaterialButton
        style="@style/Widget.Material3.Button.IconButton"
        android:id="@+id/search_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        app:iconTint="@color/primaryText"
        app:iconSize="25dp"
        app:backgroundTint="@color/primaryColor"
        app:icon="@drawable/baseline_search_24"
        app:layout_constraintBottom_toBottomOf="@+id/tracking_code"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tracking_code"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/add_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_marginTop="109dp"
        android:layout_marginBottom="59dp"
        android:enabled="false"
        android:text="@string/add_button"
        android:textColor="@color/primaryText"
        android:backgroundTint="@color/primaryColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/additionalInstructionsText"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>