<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/materialCardView2"
        android:layout_width="0dp"
        android:layout_height="98dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="8dp"
        app:cardCornerRadius="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/shipperImage"
                android:scaleX="0.8"
                android:scaleY="0.8"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/shipper_company"
                app:srcCompat="@drawable/correos" />

            <LinearLayout
                android:layout_width="250dp"
                android:layout_height="101dp"
                android:layout_gravity="bottom"
                android:orientation="vertical"
                android:padding="8dp">

                <TextView
                    android:id="@+id/textTrackingNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="2dp"
                    android:text="@string/test_package_name"
                    android:textAppearance="?attr/textAppearanceHeadline6"
                    android:textSize="18sp"
                    tools:pointerIcon="arrow" />

                <TextView
                    android:id="@+id/shipperCompany"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="2dp"
                    android:text="@string/test_package_description"
                    android:textAppearance="?attr/textAppearanceBody2" />

                <TextView
                    android:id="@+id/daysUntilArrival"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="2dp"
                    android:text="@string/test_arrival_time"
                    android:textAppearance="?attr/textAppearanceBody2" />

            </LinearLayout>

        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>