<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ARScanner">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbarARScanner2"
        android:layout_width="fill_parent"
        android:layout_height="54dp"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        android:translationZ="90dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="?attr/actionModeCloseDrawable"
        app:navigationIconTint="@color/white"
        app:title="@string/scanner"
        app:titleTextColor="@color/white" />

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="411dp"
        android:layout_height="323dp"
        android:layout_marginTop="36dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView28"
        tools:srcCompat="@drawable/packages" />

    <TextView
        android:id="@+id/textView28"
        android:layout_width="408dp"
        android:layout_height="32dp"
        android:layout_marginTop="40dp"
        android:text="@string/scanner_text"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarARScanner2" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/cameraButton"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="76dp"
        android:adjustViewBounds="false"
        android:clickable="true"
        android:scaleType="center"
        app:backgroundTint="@color/teal_700"
        app:fabCustomSize="60dp"
        app:fabSize="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView11"
        app:srcCompat="@android:drawable/ic_menu_camera" />

    <Button
        android:id="@+id/buttonCamera"
        android:layout_width="123dp"
        android:layout_height="88dp"
        android:layout_marginBottom="4dp"
        android:text="@string/test_address"
        android:tooltipText="@string/test_address"
        app:layout_constraintBottom_toBottomOf="@+id/imageView11"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.225"
        app:layout_constraintStart_toStartOf="parent"
        app:toggleCheckedStateOnClick="false" />
</androidx.constraintlayout.widget.ConstraintLayout>